# aoc2025

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: day01.cpp  day02.cpp  utils.cpp  utils.h
